fix header on mobile

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
@@ -33,10 +33,12 @@
         @include breakpoint(desktop, up)
             display: none
     .swiper-pagination-bullets
-        bottom: -5px
+        bottom: 10px
     .swiper-pagination-bullet
         background: $white
         opacity: 1
+        width: 5px
+        height: 5px
         &-active
             background: $gold
     .swiper-slide:not(.swiper-slide-visible)
